Bug 250889 - Selector filter fails to collect hash for the first simple selector in :is()
Summary: Selector filter fails to collect hash for the first simple selector in :is()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antti Koivisto
URL:
Keywords: InRadar
Depends on:
Blocks: 250833
  Show dependency treegraph
 
Reported: 2023-01-20 02:56 PST by Antti Koivisto
Modified: 2023-01-20 09:32 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2023-01-20 02:56:46 PST
Logic bug in https://commits.webkit.org/259089@main
Comment 1 Radar WebKit Bug Importer 2023-01-20 02:57:03 PST
<rdar://problem/104469871>
Comment 2 Antti Koivisto 2023-01-20 03:16:46 PST
Pull request: https://github.com/WebKit/WebKit/pull/8869
Comment 3 EWS 2023-01-20 09:32:22 PST
Committed 259144@main (8cee0c833695): <https://commits.webkit.org/259144@main>

Reviewed commits have been landed. Closing PR #8869 and removing active labels.