Selector filter fails to collect hash for the first simple selector in :is() https://bugs.webkit.org/show_bug.cgi?id=250889 <rdar://problem/104469871>

Reviewed by Alan Baradlay.

Logic bug in https://commits.webkit.org/259089@main

Add testing support for selector filter hash collection and a basic unit test.

* LayoutTests/fast/selectors/selector-filter-hashes-expected.txt: Added.
* LayoutTests/fast/selectors/selector-filter-hashes.html: Added.
* Source/WebCore/css/CSSSelector.h:
* Source/WebCore/css/SelectorFilter.cpp:
(WebCore::SelectorFilter::collectSelectorHashes):

Collect from the first simple selector too when IncludeRightmost::Yes is set.

(WebCore::SelectorFilter::collectHashesForTesting):
* Source/WebCore/css/SelectorFilter.h:
* Source/WebCore/css/parser/CSSParser.h:
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::selectorFilterHashCounts):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/259144@main