Source/WebCore/testing/Internals.h
@@ -1359,6 +1359,14 @@ public:
 
     void acceptTypedArrays(Int32Array&);
 
+    struct SelectorFilterHashCounts {
+        size_t ids { 0 };
+        size_t classes { 0 };
+        size_t tags { 0 };
+        size_t attributes { 0 };
+    };
+    SelectorFilterHashCounts selectorFilterHashCounts(const String& selector);
+
 private:
     explicit Internals(Document&);
     Document* contextDocument() const;
